# bigbrainjs

./: .clang-format  .gitignore  CMakeLists.txt
benchmark/h3/: h3.benchmark.cpp  package.json
include/bbjs/engine/: Engine.h  FeatureFlags.h  Package.h  SemanticVersion.h
include/bbjs/parser/: Node.h  Parser.h
include/v6turbo/compiler/: Compiler.h
include/v6turbo/engine/: Engine.h  ExecutionSession.h  FeatureFlags.h  Package.h  SemanticVersion.h
include/v6turbo/parser/: Node.h  Parser.h
lib/compiler/: Compiler.cpp
lib/engine/: Engine.cpp  ExecutionSession.cpp  SemanticVersion.cpp
lib/parser/: Parser.cpp
src/: main.cpp
test/: engine.test.cpp  h3.test.cpp  parser.test.cpp  scripts.test.cpp
test/activity-monitor.v6/: index.js  package.json
test/game/: package.json
test/h3/: app.mjs  package-lock.json  package.json  server.mjs
test/header-parser/: package-lock.json  package.json
test/parser/: for-loop.mjs  functions.mjs  multi-comment.mjs  package.json  simple-hash.mjs  single-comment.mjs  variables.mjs
